<resources>
    <string name="app_name" translatable="false">AuthGuard</string>
    <string name="btn_push_me">Button</string>
    <string name="main_fragment_hello">Hello</string>
    <string name="login">Login</string>
    <string name="congratulations_you_have_successfully_logged_in">Congratulations, you have successfully logged in!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>ø
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_authentication_method">Select the <b>authentication method</b></string>
    <string name="network_service_discovery">Network service discovery</string>
    <string name="back">Back</string>
    <string name="generate_qr_code">QR code</string>
    <string name="barcode">barcode</string>
    <string name="i_want_scan">I want scan!</string>
    <string name="camera_permission_rejected_first_time">It seems that you have not given permission to the camera, without it you will not be able to scan the QR code on the screen of another device, let\'s try each time</string>
    <string name="camera_permission_rejected_second_time">Go to settings and enable camera permission</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="choose_you_role">Choose you role</string>
    <string name="nsd_client_instruction">Open previous screen from another device in same WIFI network and press <b>\"I want to be server\"</b> button</string>
    <string name="nsd_server_instruction">Open previous screen from another device in same WIFI network and press <b>\"I want to be client\"</b> button</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="i_want_to_be_server">I want to be server</string>
    <string name="i_want_to_be_client">I want to be client</string>
    <string name="message_from_client">Message from client</string>
    <string name="message_from_server">Message from server</string>
    <string name="message_to_server">Message to server</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="powered_by_bohdan_oliinyk">Powered by Bohdan Oliinyk</string>
    <string name="save_this_qr_code"><u>Save this QR code</u></string>
    <string name="clear_saved_qr_code"><u>Clear saved QR code</u></string>
    <string name="qr_code_saved">QR code was successfully saved!</string>
    <string name="social_login">Social login</string>
    <string name="sign_out">Sign out</string>
    <string name="server_client_image">Server/Client image</string>
    <string name="google">Google image</string>
    <string name="server_data">Server data</string>
    <string name="action_refresh">Refresh</string>
    <string name="swipe_left">Swipe left</string>
    <string name="please_enter_message">Please enter message to server</string>
    <string name="send">Send</string>
</resources>