<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Container.ScreenContentWithDefaultPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AuthMethodFragment">

    <TextView
        android:id="@+id/txtPoweredBy"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/powered_by_bohdan_oliinyk"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_vertical_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_shield"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/txtAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPoweredBy" />

    <TextView
        android:id="@+id/txtAppName"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAppIcon" />

    <TextView
        android:id="@+id/txtChoosePairingMethod"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_horizontal_margin_small"
        android:text="@string/select_authentication_method"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/containerButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoosePairingMethod"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnNsd"
            style="@style/Widget.AuthGuardian.Button.Material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/network_service_discovery"
            app:icon="@drawable/ic_network_service_discovery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnQrCode"
            style="@style/Widget.AuthGuardian.Button.Material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/generate_qr_code"
            app:icon="@drawable/ic_qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNsd" />

        <Button
            android:id="@+id/btnSocialLogin"
            style="@style/Widget.AuthGuardian.Button.Material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/social_login"
            app:icon="@drawable/img_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnQrCode" />

        <Button
            android:id="@+id/btnNavigateToDatabase"
            style="@style/Widget.AuthGuardian.Button.Material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/server_data"
            app:icon="@drawable/ic_dataset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSocialLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>