<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".fragment.QrCodeGenerationFragment">

    <FrameLayout
        android:id="@+id/qrCodeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/spinner"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminate="true" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/imgQrCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/barcode"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnSaveQrCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_vertical_margin"
        android:text="@string/save_this_qr_code"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/qrCodeLayout"
        app:layout_constraintStart_toStartOf="@+id/qrCodeLayout"
        app:layout_constraintTop_toBottomOf="@+id/qrCodeLayout"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtPermissionRejectedMessage"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_vertical_margin"
        android:text="@string/camera_permission_rejected_first_time"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveQrCode"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgArrowGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        android:contentDescription="@string/go_to_settings"
        android:src="@drawable/ic_bottom_arrow"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnScanQrCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPermissionRejectedMessage"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnScanQrCode"
        style="@style/Widget.AuthGuardian.Button.Material"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/i_want_scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>