<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Container.ScreenContentWithDefaultPadding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NsdChooseRoleFragment">

    <TextView
        android:id="@+id/txtNsdGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_you_role"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="640dp">

        <Button
            android:id="@+id/btnClient"
            style="@style/Widget.AuthGuardian.Button.Material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_want_to_be_client" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnServer"
            style="@style/Widget.AuthGuardian.Button.Material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/i_want_to_be_server" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>